# frame-starter-kit

./: Cargo.toml
frontent/src/: App.js
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs
pallets/: Cargo.toml
pallets/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
